# orochimaru

./: .gitignore  CONTRIBUTION.md  Cargo.toml  README.md  check.sh
.github/workflows/: ci.yml  lints-stable.yml
contracts/: .prettierrc  .solcover.js  README.md  clean.js  env.ts  hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: OrochiECVRF.sol  OrochiECVRFDebug.sol  VRF.sol
contracts/contracts/debug/: VRFDebug.sol
contracts/contracts/interfaces/: IOrandConsumerV1.sol  IOrandECDSA.sol  IOrandECVRF.sol  IOrandPenalty.sol  IOrandProviderV1.sol  IOrandStorage.sol  OrandConsumer.sol
contracts/contracts/libraries/: Bytes.sol  Verifier.sol
contracts/contracts/orand/: OrandECDSA.sol  OrandECVRF.sol  OrandManagement.sol  OrandPenalty.sol  OrandProvider.sol  OrandProviderV1.sol  OrandSender.sol  OrandSignatureVerifier.sol  OrandStorage.sol
contracts/contracts/test/: BigO.sol  ExampleDice.sol  ExampleFraudProofDice.sol  ExampleValidityProofDice.sol  OrochiECVRF.sol  OrochiECVRFDebug.sol  OrochiVRF.sol  OrochiVRFDebug.sol
contracts/helper/: const.ts  deployer.ts  index.ts
contracts/helpers/: deployer.ts  functions.ts  index.ts  singleton.ts
contracts/helpers/tasks/: deploy-dice-example.ts  deploy-orandv1.ts
contracts/tasks/: deploy-dice-example.ts  deploy-orandv1.ts
contracts/test/: 001-ecvrf.spec.ts  002-orand-provider-v1.spec.ts  003-batching.spec.ts
docker/node/: Dockerfile  docker-compose.yml  env  orand.Dockerfile  pg-init.sql  pg.Dockerfile
ecvrf/: Cargo.toml
ecvrf/src/: ecproof.rs  helper.rs  lib.rs  main.rs
entity/: keyring.rs  mod.rs  randomness.rs  receiver.rs
kvdb/: Cargo.toml
kvdb/src/: lib.rs
libecvrf/: Cargo.toml  README.md
libecvrf/examples/: vrf.rs
libecvrf/src/: ecvrf.rs  error.rs  extend.rs  extends.rs  hash.rs  helper.rs  lib.rs
libecvrf/src/ecvrf/: error.rs  extends.rs  hash.rs  mod.rs
migration/src/: lib.rs  m20220101_000001_create_table_keyring.rs  m20221105_172637_create_table_randomness.rs  m20221229_005309_create_table_receiver.rs
node/: Cargo.toml  keyring.rs  lib.rs  main.rs  mod.rs  prelude.rs  randomness.rs  receiver.rs
node/ethereum/: mod.rs
node/json_rpc/: mod.rs
node/jwt/: mod.rs
node/migration/: Cargo.toml
node/migration/src/: lib.rs  m20220101_000001_create_table_keyring.rs  m20221229_005309_create_table_receiver.rs  m20230115_172637_create_table_randomness.rs  main.rs
node/sqlite/: mod.rs  randomness.rs
node/sqlite/table/: keyring.rs  randomness.rs
node/src/: cli.rs  error.rs  ethereum.rs  evm.rs  jwt.rs  lib.rs  main.rs  node_context.rs  quick_response.rs  rpc.rs
node/src/postgres/: keyring.rs  mod.rs  postgres_sql.rs  randomness.rs  receiver.rs
node/src/postgres/table/: keyring.rs  mod.rs  randomness.rs  receiver.rs
node/src/sqlite/: keyring.rs  mod.rs  prelude.rs  randomness.rs  receiver.rs  sqlite_db.rs
node/src/sqlite/table/: keyring.rs  randomness.rs  receiver.rs
poseidon/: Cargo.toml  README.md
poseidon/examples/: poseidon_hash.rs  testcase.rs
poseidon/src/: circuit.rs  gadgets.rs  lib.rs  poseidon_constants.rs  poseidon_hash.rs
src/: Cargo.toml  lib.rs  main.rs
src/database/: mod.rs
src/ethereum/: mod.rs
src/json_rpc/: mod.rs
src/jwt/: mod.rs
src/protos/: mod.rs  storage.proto  storage.rs
src/sqlite/: keyring.rs  mod.rs  prelude.rs  randomness.rs  receiver.rs  sqlite_db.rs  sqlitedb.rs
src/sqlite/table/: keyring.rs  randomness.rs  receiver.rs
verkletree/: Cargo.toml  README.md
verkletree/examples/: test.rs  testCommitmentScheme.rs  test_commitment.rs  test_verkle_tree.rs  verkletree.rs
verkletree/src/: circuit.rs  commitment.rs  lib.rs  verkle_tree.rs  verkletree.rs
wano/: Cargo.toml  README.md
zkdb/: Cargo.toml
zkmemory/: Cargo.toml  README.md
zkmemory/.tours/: generalize-the-field-element-in-implementation.tour
zkmemory/examples/: 256bits-machine.rs  64bits-machine.rs  kzg-commitment.rs  memory-consistency.rs
zkmemory/src/: abstract_machine.rs  base.rs  commitment.rs  config.rs  default_state_machine.rs  error.rs  kzg.rs  lib.rs  machine.rs  main.rs  memory.rs  register_machine.rs  simple_state_machine.rs  stack_machine.rs  state_machine.rs
zkmemory/src/commitment/: commitment_scheme.rs  extends.rs  kzg.rs  merkle_tree.rs  mod.rs  poseidon.rs  verkle_tree.rs
zkmemory/src/constraints/: chronically_ordering.rs  common.rs  consistency_check.rs  consistency_check_circuit.rs  gadgets.rs  helper.rs  lexicographic_ordering.rs  mod.rs  original_memory_circuit.rs  permutation.rs  permutation_circuit.rs  sorted_memory_circuit.rs  test.rs
zkmemory/src/nova/: gadgets.rs  memory_commitment.rs  memory_consistency_circuit.rs  mod.rs  poseidon_parameters.rs  testcases.rs
zkmemory/src/poseidon/: circuit.rs  gadgets.rs  mod.rs  poseidon.rs  poseidon_constants.rs  poseidon_constraints.rs  poseidon_hash.rs
zkmemory/src/ram_machine/: base.rs  config.rs  error.rs  machine.rs  memory.rs  mod.rs
zkmemory/src/state_machine/: memory.rs  mod.rs
zkmemory/src/supernova/: memory_consistency_circuit.rs  mod.rs  poseidon_parameter.rs  testcases.rs
zkrisc/: Cargo.toml
