[workspace]
members = ["libecvrf", "zkmemory", "zkrisc", "zkdb", "node", "wano", "verkletree"]
exclude = []
resolver = "2"

[workspace.package]
authors = [
    "Chiro <chiro@orochi.network>",
]
repository = "https://github.com/orochi-network/orochimaru/"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
keywords = ["risc", "zkdb", "zkp", "vrf", "mpc"]
categories = ["zkp", "cryptography", "distributed", "mpc"]

[profile.bench]
lto = "fat"
codegen-units = 1

