[workspace]
members = [
    "libecvrf",
    "zkmemory",
    "zkrisc",
    "zkdb",
    "node",
    "node/migration",
    "wano",
    "verkletree",
    "poseidon",
]
exclude = []
resolver = "2"

[workspace.package]
authors = ["Chiro <chiro@orochi.network>"]
repository = "https://github.com/orochi-network/orochimaru/"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
keywords = ["risc", "zkdb", "zkp", "vrf", "mpc"]
categories = ["zkp", "cryptography", "distributed", "mpc"]

[profile.bench]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
cargo-llvm-cov = "0.5.27"
ethnum = "1.3.2"
hex = "0.4.3"
rbtree = "0.1.5"
halo2_proofs = { git = "https://github.com/orochi-network/halo2", tag = "v0_0_2" }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.2" }
ff = "0.13.0"
group = "0.13.0"
rand_core = "0.6.4"
rand = "0.8.5"
serde_json = "1.0.87"
serde = "1.0.147"
nova-snark = { git = "https://github.com/microsoft/Nova", default-features = false }
bellpepper-core = { version="0.4.0", default-features = false }
arecibo = { git = "https://github.com/argumentcomputer/arecibo" }