[workspace]
members = [
    "libecvrf",
    "zkmemory",
    "zkrisc",
    "zkdb",
    "node",
    "node/migration",
    "wano",
    "verkletree",
    "poseidon",
]
exclude = []
resolver = "2"

[workspace.package]
authors = ["Chiro <chiro@orochi.network>"]
repository = "https://github.com/orochi-network/orochimaru/"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
keywords = ["risc", "zkdb", "zkp", "vrf", "mpc"]
categories = ["zkp", "cryptography", "distributed", "mpc"]

[profile.bench]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
cargo-llvm-cov = "0.6.13"
ethnum = "1.5.0"
hex = "0.4.3"
rbtree = "0.2.0"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0" }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "v0.7.0" }
ff = "0.13.0"
group = "0.13.0"
rand_core = "0.6.4"
rand = "0.8.5"
serde_json = "1.0.128"
serde = "1.0.210"
nova-snark = { git = "https://github.com/microsoft/Nova", default-features = false }
bellpepper-core = { version = "0.4.0", default-features = false }
arecibo = { git = "https://github.com/argumentcomputer/arecibo" }
