[package]
name = "ecvrf"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ecvrf"
path = "src/lib.rs"

[dependencies]
tiny-keccak = { version = "2.0.2", default-features = false, features=["keccak"] }
libsecp256k1 = "0.7.1"
rand = "0.8.5"
hex = "0.4.3"