[package]
name = "libecvrf"
version = "1.1.2"
description = "A ECVRF that's friendly with EVM, based on curve secp256k1 and keccak256"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "README.md"
keywords = ["vrf", "ecvrf", "libecvrf", "randomness", "rng"]
categories = ["no-std", "cryptography", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libecvrf"
path = "src/lib.rs"

[dependencies]
tiny-keccak = { version = "2.0.2", default-features = false, features=["keccak"] }
libsecp256k1 = "0.7.1"
rand = "0.8.5"
hex = "0.4.3"

[features]
default = ["no_std"]
std = []
no_std = []