[package]
name = "libecvrf"
version = "1.2.1-beta.0"
description = "A ECVRF that's friendly with EVM, based on curve secp256k1 and keccak256"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
readme = "README.md"
keywords = ["vrf", "ecvrf", "libecvrf", "randomness", "rng"]
categories = ["no-std", "cryptography", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libecvrf"
path = "src/lib.rs"

[dependencies]
tiny-keccak = { version = "2.0.2", default-features = false, features = [
    "keccak",
] }
tiny-ec = { version = "0.1.3" }
rand = { workspace = true }
hex = { workspace = true }

[features]
default = ["no_std"]
std = []
no_std = []
