

[package]
name = "node"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[lib]
name = "node"
path = "src/lib.rs"

[features]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
clap = "4.4.11"
libecvrf = { version = "1.0.1", path = "../libecvrf" }
tiny-keccak = { version = "2.0.2", default-features = false, features = [
    "keccak",
] }
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.21.2", features = ["full"] }
sea-orm = { version = "^0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
hmac = "0.12.1"
bytes = "1.3.0"
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
regex = "1.7.0"
base64-url = "1.4.13"
sha2 = "0.10.6"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
