

[package]
name = "node"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[lib]
name = "node"
path = "src/lib.rs"

[features]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
revm = { git = "https://github.com/bluealloy/revm.git", rev = "5e6546e" }
clap = "4.4.16"
libecvrf = { version = "^1.1.2", path = "../libecvrf" }
tiny-keccak = { version = "2.0.2", default-features = false, features = [
    "keccak",
] }
log = "0.4.20"
env_logger = "0.10.1"
tokio = { version = "1.35.1", features = ["full"] }
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
hmac = "0.12.1"
bytes = "1.5.0"
dotenv = "0.15.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
regex = "1.10.2"
base64-url = "2.0.2"
sha2 = "0.10.8"
hyper = { version = "1.1.0", features = ["full"] }
http-body-util = "0.1.0"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git", tag = "v0.1.2", features = [
    "tokio",
] }
