

[package]
name = "node"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[lib]
name = "node"
path = "src/lib.rs"

[features]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
revm = { git = "https://github.com/bluealloy/revm.git", rev = "5e6546e" }
clap = "4.5.18"
libecvrf = { version = "^1.1.2", path = "../libecvrf" }
tiny-keccak = { version = "2.0.2", default-features = false, features = [
    "keccak",
] }
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.40.0", features = ["full"] }
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
hmac = "0.12.1"
bytes = "1.7.2"
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
regex = "1.10.6"
base64-url = "3.0.0"
sha2 = "0.10.8"
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git", tag = "v0.1.2", features = [
    "tokio",
] }
