[package]
name = "wano"
version = "0.1.0"
description = "Cairo-vm on Plonk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license = "Apache-2.0"
readme = "README.md"
keywords = ["zkp", "zkmemory", "zkvm", "zkrisc", "ram"]
categories = ["no-std", "cryptography", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkrisc"
path = "src/lib.rs"

[dependencies]
