[package]
name = "zkmemory"
version = "0.1.1"
edition = "2021"
description = "An universal memory prover in Zero-Knowledge Proof"
authors.workspace = true
repository.workspace = true
readme = "README.md"
license = "Apache-2.0"
keywords = ["zkp", "zkmemory", "zkvm", "zkrisc", "ram"]
categories = ["zkp", "cryptography", "vm", "ram"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkmemory"
path = "src/lib.rs"

[dependencies]
cargo-llvm-cov = "0.5.27"
ethnum = "1.3.2"
hex = "0.4.3"
rbtree = "0.1.5"
halo2_proofs = {git="https://github.com/privacy-scaling-explorations/halo2", tag="v2023_04_20"}
halo2curves = {git="https://github.com/privacy-scaling-explorations/halo2curves", tag="0.3.2"}
