[package]
name = "zkmemory"
version = "0.1.1"
edition = "2021"
description = "An universal memory prover in Zero-Knowledge Proof"
authors.workspace = true
repository.workspace = true
readme = "README.md"
license = "Apache-2.0"
keywords = ["zkp", "zkmemory", "zkvm", "zkrisc", "ram"]
categories = ["zkp", "cryptography", "vm", "ram"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkmemory"
path = "src/lib.rs"

[dependencies]
halo2_proofs = { workspace = true }
halo2curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
cargo-llvm-cov = { workspace = true }
ethnum = { workspace = true }
hex = { workspace = true }
rbtree = { workspace = true }
itertools = "0.12.1"
