[package]
name = "zkrisc"
version = "0.1.0"
description = "A Zero-Knowledge CPU based on RISC-V and zkSNARK"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkrisc"
path = "src/lib.rs"

[dependencies]
